--- a/RT/RT.csproj
+++ b/RT/RT.csproj
@@ -94,6 +94,7 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\monotouch\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -116,6 +117,7 @@
     <Compile Include="RTTableViewController.cs" />
     <Compile Include="RTTableViewCell.cs" />
     <Compile Include="RTTableViewSource.cs" />
+    <Compile Include="RTMovieView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
 </Project>
