--- a/RT/Info.plist
+++ b/RT/Info.plist
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>RT</string>
+	<string>RTiOS</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.your-company.RT</string>
 	<key>CFBundleShortVersionString</key>
