--- a/RT/Info.plist
+++ b/RT/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>RTiOS</string>
+	<string>RT</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.your-company.RT</string>
 	<key>CFBundleShortVersionString</key>
