--- a/RT/Info.plist
+++ b/RT/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>RT</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.your-company.RT</string>
+	<string>Salman.XamarinInterview.RT</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -27,6 +27,10 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>CF_120x120</string>
 	</array>
 </dict>
 </plist>
